RESOLVED FIXED300588
WebKitWebExtension path is not properly set
https://bugs.webkit.org/show_bug.cgi?id=300588
Summary WebKitWebExtension path is not properly set
Jamie Murphy
Reported 2025-10-12 11:34:50 PDT
When creating a new WebKitWebExtension, the extension resource path is not properly set, and loading the extension manifest fails with "it is an invalid path"
Attachments
Jamie Murphy
Comment 1 2025-10-12 11:38:16 PDT
EWS
Comment 2 2025-10-13 06:19:07 PDT
Committed 301403@main (8c065d25f2e2): <https://commits.webkit.org/301403@main> Reviewed commits have been landed. Closing PR #52202 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.