[GTK] Properly set the path for a newly created WebExtension https://bugs.webkit.org/show_bug.cgi?id=300588

Reviewed by Patrick Griffis.

When fixing the build on Clang, we accidentally removed the
code that sets the resourceBaseURL for the extension.
Somehow the tests never caught that failure. This properly
sets the path and properly checks and adjusts the path as
necessary

* Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp:
(WebKit::WebExtension::WebExtension):

Canonical link: https://commits.webkit.org/301403@main